@@ -1,3 +1,8 @@
+2007-11-13  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc.el (vc-register): Allow registering a file passed as a
+	parameter instead of just the current buffer.
+
 2007-11-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp.el (tramp-open-connection-setup-interactive-shell): Check
